# NKFADC500_USB

./: AnalyzeSPE.C  CMakeLists.txt  README.md  rebuild.sh  setup.sh
config/: kfadc500.config
include/: ConfigParser.hh  DataCore.hh  ObjectPool.hh  ReadDataWorker.hh  RootProducer.hh  ZmqPublisher.hh
python/: online_monitor.py  requirements.txt
python/cli/: online_monitor.py
python/gui/: main.py
python/gui/classes/: ZmqWorker.py
python/gui/core/: DatabaseManager.py  ProcessManager.py
python/gui/widgets/: ConfigTab.py  DatabaseTab.py  HVControlTab.py  LiveDashboard.py  LiveMonitorTab.py  ProductionTab.py  RunControlTab.py  TriggerLUTTab.py
python/gui/windows/: MainWindow.py
rules/: 99-kfadc500.rules  setup_env.sh
src/: ConfigParser.cc  ReadDataWorker.cc  RootProducer.cc  ZmqPublisher.cc  main.cc  production_main.cc
